Header z-index fix

--- a/wp-content-2018/themes/hp-2018/assets-2018/styles/header.css
+++ b/wp-content-2018/themes/hp-2018/assets-2018/styles/header.css
@@ -13,7 +13,8 @@
 
 
 .hp-header-container {
-    position: relative
+    position: relative;
+    z-index: 1;
 }
 
 .hp-header {
