--- a/wp-content-2018/themes/hp-2018/assets-2018/styles/scss/_video-hero.scss
+++ b/wp-content-2018/themes/hp-2018/assets-2018/styles/scss/_video-hero.scss
@@ -56,7 +56,7 @@
         display: table-cell;   
         vertical-align: middle;
         position: relative;
-        z-index: 1;
+        z-index: 0;
     }
 
     .landing-pages--homepage & {
