--- a/wp-content-2018/themes/hp-2018/assets-2018/styles/styles.css
+++ b/wp-content-2018/themes/hp-2018/assets-2018/styles/styles.css
@@ -129,7 +129,7 @@
     display: table-cell;
     vertical-align: middle;
     position: relative;
-    z-index: 1; }
+    z-index: 0; }
   .landing-pages--homepage .hero.video-hero .hero__tagline {
     font-size: 3em;
     text-align: center;
